crates/toml_edit/tests/snapshots/invalid/integer/trailing-us-bin.stderr
TOML parse error at line 1, column 22
  |
1 | trailing-us-bin = 0b1_
  |                      ^
`_` may only go between digits, expected nothing
